add tagline and meta description

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Beer Picker</title>
-        <meta name="description" content="">
+        <meta name="description" content="Beer Picker will help you pick a bog standard supermarket beer, for those moments when you  don't have the time to trawl through the identical shit beers in the cornershop or supermarket">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/app.css">
         <script type="text/javascript" async src="//platform.twitter.com/widgets.js"></script>
@@ -57,6 +57,7 @@
       </div>
       <div class="container">
         <div class="page">
+        <h1 class="goal-description">Beer Picker will help you pick a bog standard supermarket beer, for those moments when you  don't have the time to trawl through the identical shit beers in the cornershop or supermarket</h1>
         <%= yield %>
         </div>
       </div>
