--- a/public/app.css
+++ b/public/app.css
@@ -91,6 +91,11 @@ a, a:hover, a:active, a:focus{
   color: #000;
   text-align: center;
 }
+.goal-description{
+  font-size: 1.1em;
+  font-weight: 200;
+  color: #fff;
+}
 @media screen and (max-width: 640px){
   .page{
     padding-top: 150px;
