add some stuff make links to google doc instead of anyything else

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
     <input type="submit" value="Go">
   </form>
   <% else %>
-  <h2 class="location-title">We've currently only got British Supermarket Beers, contribute a list <a class="link" target="_blank" href="https://docs.google.com/forms/d/1Y4apyCJ6dIuqSC4ympgkFLoFuIC7E8NWEQCHUYIp14A/viewform?usp=send_form">here</a></h2>
+  <h2 class="location-title">We've currently only got British Supermarket Beers, contribute a list <a class="link" target="_blank" href="https://docs.google.com/document/d/10Vu57FknqXOyZU_mfsFqi3lVWngoCCsaDB4tMoOKsek/edit?usp=sharing">here</a></h2>
   <% end %>
 </div>
 <div class="row">
