revert back to the form

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,7 +30,7 @@
           Beer Picker
           </a>
           <div class="right">
-            <a class="feedback-button button" target="_blank" href="https://docs.google.com/document/d/10Vu57FknqXOyZU_mfsFqi3lVWngoCCsaDB4tMoOKsek/edit?usp=sharing">Add my beers</a>
+            <a class="feedback-button button" target="_blank" href="http://goo.gl/forms/y00M7n9Zwd">Add my beers</a>
             <a class="open-share-modal button" href="javascript:return(0)">Share</a>
           </div>
         </div>
