--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
     <input type="submit" value="Go">
   </form>
   <% else %>
-  <h2 class="location-title">We've currently only got British Supermarket Beers, contribute a list <a class="link" target="_blank" href="https://docs.google.com/document/d/10Vu57FknqXOyZU_mfsFqi3lVWngoCCsaDB4tMoOKsek/edit?usp=sharing">here</a></h2>
+  <h2 class="location-title">We've currently only got British Supermarket Beers, contribute a list <a class="link" target="_blank" href="http://goo.gl/forms/y00M7n9Zwd">here</a></h2>
   <% end %>
 </div>
 <div class="row">
