disable pinch-zooming

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Beer Picker</title>
         <meta name="description" content="Beer Picker will help you pick a bog standard supermarket beer, for those moments when you  don't have the time to trawl through the identical shit beers in the cornershop or supermarket">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable= 0">
         <link rel="stylesheet" href="/app.css">
         <script type="text/javascript" async src="//platform.twitter.com/widgets.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
