--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,19 @@
+<div class="row">
+  <div class="beer-random card">
+    <h2 class="beer-title"><%= @beer["title"] %></h2>
+    <h3 class="beer-percentage"><%= @beer["percentage"] %>%</h3>
+    <p class="beer-description"><%= @beer["description"] %></p>
+  </div>
+</div>
+<div class="row">
+  <a href=<%= "/?location=#{@selected_location}" %> class="beer-random-button button">Pick me another</a>
+</div>
+<div class="row share-row">
+  <a href="#" class="link open-share-modal">Share</a>
+</div>
 <div class="row location-cta">
   <% if @locations.count > 1 %>
-  <h2 class="location-title">Which beers would you like?</h2>
+  <h2 class="location-title">Location</h2>
   <form>
     <select name="location">
       <% @locations.each do |k| %>
@@ -12,18 +25,4 @@
   <% else %>
   <h2 class="location-title">We've currently only got British Supermarket Beers, contribute a list <a class="link" target="_blank" href="http://goo.gl/forms/y00M7n9Zwd">here</a></h2>
   <% end %>
-</div>
-<div class="row">
-  <div class="beer-random card">
-    <h2 class="beer-title"><%= @beer["title"] %></h2>
-    <h3 class="beer-percentage"><%= @beer["percentage"] %>%</h3>
-    <p class="beer-description"><%= @beer["description"] %></p>
-  </div>
-</div>
-<div class="row">
-  <a href=<%= "/?location=#{@selected_location}" %> class="beer-random-button button">Pick me another</a>
-  <a href="#" class="button open-share-modal">Share</a>
-</div>
-<div class="row">
-  <a href="http://goo.gl/forms/SPtf360DVL" target="_blank"><h3 class="app-header feedback-button button">I would like an app that does this</h3></a>
 </div>
