--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,7 +39,7 @@
           </a>
           <div class="right">
             <a class="feedback-button button" target="_blank" href="http://goo.gl/forms/y00M7n9Zwd">Add my beers</a>
-            <a class="open-share-modal button" href="javascript:return(0)">Share</a>
+            <a class="open-share-modal link white" href="javascript:return(0)">Share</a>
           </div>
         </div>
       </div>
@@ -66,7 +66,6 @@
       </div>
       <div class="container">
         <div class="page">
-        <h1 class="goal-description">Beer Picker will help you pick a bog standard supermarket beer, for those moments when you  don't have the time to trawl through the identical shit beers in the cornershop or supermarket</h1>
         <%= yield %>
         </div>
       </div>
