--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
   <div class="beer-random card">
     <h2 class="beer-title"><%= @beer["title"] %></h2>
     <h3 class="beer-percentage"><%= @beer["percentage"] %>%</h3>
-    <p class="beer-description"><%= @beer["description"] %></p>
+    <p class="beer-description"><span class="quote left">&#171;</span><%= @beer["description"] %><span class="quote right">&#187;</span></p>
   </div>
 </div>
 <div class="row">
