--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="/app.css">
         <script type="text/javascript" async src="//platform.twitter.com/widgets.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <script>
+        <!--<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -21,7 +21,7 @@
         ga('create', 'UA-68164017-1', 'auto');
         ga('send', 'pageview');
 
-        </script>
+      </script>-->
     </head>
     <body>
       <div id="fb-root"></div>
@@ -66,14 +66,81 @@
       </div>
       <div class="container">
         <div class="page">
+        <!--<div style="float:left; height: 300px; width: 100px; background-size: contain;background-image: url('/beer-bottle.png');">
+          <div id="content"></div>
+        </div>-->
         <%= yield %>
         </div>
       </div>
+      <!-- <div id="content"></div> -->
       <div class="ack">
+        <!--<a href='http://www.freepik.com/free-vector/beer-glass-illustration_757103.htm'>Beer image designed by Freepik</a>-->
         <a href="http://twitter.com/intent/follow?user_id=2603804084">@hugo__df</a>
         <a target="_blank" href="http://hugodf.github.io">&copy; Hugo</a>
       </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="https://www.google.com/jsapi"></script>
+      <script type="text/javascript">
+
+        google.load('search', '1');
+
+        var imageSearch;
+
+        function searchComplete() {
+          // Check that we got results
+          if (imageSearch.results && imageSearch.results.length > 0) {
+
+            // Grab our content div, clear it.
+            var contentDiv = document.getElementById('content');
+            contentDiv.innerHTML = '';
+
+            // Loop through our results, printing them to the page.
+            var results = imageSearch.results;
+            // for (var i = 0; i < results.length; i++) {
+            for (var i = 0; i < 1; i++) {
+              // For each result write it's title and image to the screen
+              var result = results[i];
+              var imgContainer = document.createElement('a');
+              imgContainer.setAttribute('href', result.tbUrl);
+              console.log(result);
+              // var title = document.createElement('div');
+
+              // We use titleNoFormatting so that no HTML tags are left in the
+              // title
+              // title.innerHTML = result.titleNoFormatting;
+              var newImg = document.createElement('img');
+
+              // There is also a result.url property which has the escaped version
+              newImg.src=result.tbUrl;
+              // imgContainer.appendChild(title);
+              imgContainer.appendChild(newImg);
+
+              // Put our title + image in the content
+              contentDiv.appendChild(imgContainer);
+            }
+
+            // Now add links to additional pages of search results.
+            // addPaginationLinks(imageSearch);
+          }
+        }
+
+        function OnLoad() {
+
+          // Create an Image Search instance.
+          imageSearch = new google.search.ImageSearch();
+
+          // Set searchComplete as the callback function when a search is
+          // complete.  The imageSearch object will have results in it.
+          imageSearch.setSearchCompleteCallback(this, searchComplete, null);
+
+          // Find me a beautiful car.
+          imageSearch.execute('<%= "#{@beer["title"]} beer logo -bottle" %>');
+
+          // Include the required Google branding
+          // google.search.Search.getBranding('branding');
+        }
+        google.setOnLoadCallback(OnLoad);
+      </script> -->
       <script>
         $(function(){
           $('.feedback-button').on('click', function(){
