--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="/app.css">
         <script type="text/javascript" async src="//platform.twitter.com/widgets.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <!--<script>
+        <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -21,7 +21,7 @@
         ga('create', 'UA-68164017-1', 'auto');
         ga('send', 'pageview');
 
-      </script>-->
+      </script>
     </head>
     <body>
       <div id="fb-root"></div>
@@ -66,7 +66,7 @@
       </div>
       <div class="container">
         <div class="page">
-        <!--<div style="float:left; height: 300px; width: 100px; background-size: contain;background-image: url('/beer-bottle.png');">
+        <!--<div style="float:left; height: 600px; width: 300px; background-size: contain;background-repeat: no-repeat;background-image: url('/beer-bottle.png');">
           <div id="content"></div>
         </div>-->
         <%= yield %>
