amend copy to pour me another

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 <div class="row">
-  <a href=<%= "/?location=#{@selected_location}" %> class="beer-random-button button">Pick me another</a>
+  <a href=<%= "/?location=#{@selected_location}" %> class="beer-random-button button">Pour me another</a>
 </div>
 <div class="row share-row">
   <a href="#" class="link open-share-modal">Share</a>
